--- a/design/design.tex
+++ b/design/design.tex
@@ -240,9 +240,9 @@ Thus, we store the size of the table, and three arrays, as follows.
 \item[--] $\v{A}^{(2)}$: second Alias array.
 \end{itemize}
 
-Sampling is done by (1) uniformly selecting a cell $i$ in $\v{p}^{\v{A}^{(1)}}$, (2) returning $A^{(1)}_i$ with probability $p^{\v{A}^{(1)}}_i$ and $A^{(2)}_i$ otherwise. This requires 2 reads from global memory, which seems like it should be faster than copying the whole table to shared memory.
+Sampling is done by (1) uniformly selecting a cell $i$ in $\v{p}^{\v{A}^{(1)}}$, (2) returning $A^{(1)}_i$ with probability $p^{\v{A}^{(1)}}_i$ and $A^{(2)}_i$ otherwise. This requires 1 read of 3 values from global memory.
 
-Building the Alias table is done as follows. We access each column of $\m\Phi$ in parallel using multiple warps. Each warp performs a warp shuffle and determines how many non-zero elements it found. It writes this to shared memory. Then, the warps compute a cumulative sum of the values in shared memory. Using this, each warp writes its non-zero elements to shared memory, using the cumulative sum to figure out its place in the array. From here, the problem is reduced to building a dense Alias table in parallel.
+Building the Alias table is done as follows. We access each column of $\m\Phi$ in parallel using multiple warps. Each warp performs a warp shuffle and determines how many non-zero elements it found. It atomically increments this in shared memory, and then writes its non-zero elements to shared memory, using a warp vote to figure out its place in the array. From here, the problem is reduced to building a dense Alias table in parallel.
 
 Problem: the size of each table is variable and will change per iteration. How much memory to allocate for each table? Should we load $\v{V}$ and use a heuristic?
 
@@ -256,7 +256,7 @@ Problem: we need to update $\m{m}$ after sampling each token.
 
 \subsection{Binary Format for the Poisson Alias tables}
 
-Problem: since the Sparse Alias tables are built in parallel, we might as well build these in parallel as well. How to do this?
+Stored as a dense Alias table, i.e. two arrays.
 
 \subsection{Binary Format for $\v{V}$}
 
@@ -264,22 +264,7 @@ We need to store $\v{V}$ for three reasons: (1) in the preprocess step, since we
 
 \section{Parallel Alias table construction}
 
-Input: array $\v{p}$ of size $K$ representing a dense probability vector.
-
-Output: arrays $\v{p}^{\v{A}}$ and $\v{A}$ representing a dense Alias table.
-
-\begin{enumerate}
-\item Build an array $\v{p}^+$ consisting of all $p_i > 1/K$, and an array $\v{I}^+$ of their indices.
-\item Build an array $\v{n}^+ = \lceil \v{p}^+ / 2 \rceil$.
-\item Build an array $\v{p}^{[1,2]}$ consisting of $\v{p}^+ / \v{n}^+$ with each element repeated $\v{n}^+$ times. Notice that $\v{p}^{[1,2]} \in [1,2]^K$. Also build an array $\v{I}^{[1,2]}$ of their indices.
-\item For each thread, grab an element from $\v{p}^{[1,2]}$, and loop over a subset $\v{p}$. Let $i$ be the index of $\v{p}$, and let $j$ be the thread index.
-\begin{enumerate}
-\item If $p_i < 1/K$, set $A_i = I^{[1,2]}_j$ and $p^{[1,2]}_j = p^{[1,2]}_j - p_i$ in parallel.
-\item Perform a warp shuffle reduce to ensure $1 < p^{[1,2]}_j < 2$ for all threads. If this cannot be done, set $p_j = p^{[1,2]}_j$ and remove from $\v{p}^{[1,2]}$.
-\item Repeat until $\v{p}^{[1,2]}$ is empty on the warp, or until the end of the subset of $\v{p}$. If exiting early, write the iteration number to shared memory. If exiting late, grab a new index from shared memory and iterate.
-\end{enumerate}
-\item Once the loop is complete, each warp with remaining $\v{p}^{[1,2]}$ iterates over $\v{I}^{[1,2]}$. The warps perform a block allreduce to determine their subset. The process repeats until $\v{p}^{[1,2]}$ is empty.
-\end{enumerate}
+DONE. I have designed and implemented a synchronization-free non-divergent extension of Vose's method.
 
 
 \end{document}
