added buffer_max_docs and gpu_K_d

--- a/design/design.tex
+++ b/design/design.tex
@@ -56,6 +56,17 @@ $z_{i,d}$ & Topic indicator for word $i$ in $d$ && $\m{m} : D \times K$ & Docume
 }
 \end{center}
 
+\subsection{Limitations}
+
+\begin{itemize}
+\item 1M topics
+\item 150K vocabulary
+\item 1K common words
+\item 10K max topics per document
+\item 1K max documents per buffer
+\item No limit on number of documents
+\end{itemize}
+
 \section{Steps of Algorithm}
 
 \begin{itemize}
