partial implementation of push based hash table

--- a/design/design.tex
+++ b/design/design.tex
@@ -356,10 +356,8 @@ Accumulate2
 
 Auxillary bit field info
 \begin{itemize}
-\item Pointer Indicator: 1
-\item Relocation Indicator: 1
-\item Up/down Indicator: 1
-\item Buffer Index: 5
+\item Relocation Bit: 1
+\item Pointer: 7
 \end{itemize}
 
 Insertion
